# C3D-Tracing

./: .gitignore  C3DTracing.sln
C3DTracing/: BRDF.ppm  C3DTracing.vcxproj  C3DTracing.vcxproj.filters  CMakeLists.txt  Disk.cpp  Disk.h  Geometry.h  InvertedDisk.cpp  InvertedDisk.h  Main.cpp  Material.h  Math.cpp  Math.h  Plane.cpp  Plane.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  image.ppm
C3DTracing/Debug/: vc141.idb
C3DTracing/Debug/HelloWorld.tlog/: C3DTracing.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  desktop.ini  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C3DTracing/x64/Debug/: vc141.idb
C3DTracing/x64/Debug/C3DTracing.tlog/: C3DTracing.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C3DTracing/x64/Release/C3DTracing.tlog/: C3DTracing.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Debug/: C3DTracing.ilk
enc_temp_folder/2dd77a29b699ad8568e0cd8269a5b0eb/: Main.cpp
enc_temp_folder/58a917b258c5ef2ca43e9b919f13e74/: Material.h
enc_temp_folder/89daf6d1802537bec265165597b9d0c8/: Main.cpp
enc_temp_folder/d88535c2a366d27d076bcff5b8b350/: Math.h
x64/Debug/: C3DTracing.ilk
